--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -1,9 +1,9 @@
 <apex:page docType="html-5.0"
-sidebar="false" 
-showheader="false"
+sidebar="true" 
+showheader="true"
 standardStylesheets="false"
 Controller="ChecklistAdminController"
-applyHtmlTag="false"
+applyHtmlTag="true"
 applyBodyTag="false"
 id="todo"
 >
@@ -12,47 +12,239 @@ id="todo"
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1, user-scalable=no"/>
 <meta name="viewport" content="initial-scale = 1.0, user-scalable = no"/>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"> </script>
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
+<script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+<style>
+#admin-panel {
+  margin: 25px;
+}
+h1 { padding: .2em; margin: 0; }
+ol { margin-left: -30px; }
+.ui-widget-header {
+  font-size: 24px;
+  margin-left: -5px;
+  font-weight: 400;
+  color: #333333;
+}
+.note {
+  color: #B3B3B3;
+}
+#admin-panel li {
+  list-style-type: none;
+  padding: 10px;
+  color: #333333;
+  background: #FFFFFF;
+  border: 1px solid #CCCCCC;
+  border-top: 5px solid #8cd250;
+  border-radius: 5px;
+}
+#checklist-edit {
+  margin-right: 200px;
+}
+#sortable {
+  margin-top: 0px;
+  width: 100%;
+}
+#sortable li {
+  list-style-type: none;
+  box-sizing: border-box;
+  padding: 30px;
+  width: 100%;
+  margin-left: -10px;
+  border-top: 20px solid #BBDDBB;
+}
+.form-info {
+  list-style-type: none;
+  padding: 30px !important;
+  border-top: 20px solid #BBDDBB !important;
+}
+#placeholder {
+  background: #FFFFFF !important;
+  color: #333333 !important;
+  border: none !important;
+  padding: 0px !important;
+}
+label {
+  margin-right: 15px;
+}
+.question {
+  width: 400px;
+}
+input[type="button"], input[type="submit"] {
+  font-size: 16px !important;
+  margin-right: 5px;
+}
+</style>
+<script>
+$(function() {
+  $( "ol" ).sortable({
+    items: "li:not(.placeholder)",
+    sort: function() {
+      // gets added unintentionally by droppable interacting with sortable
+      // using connectWithSortable fixes this, but doesn't allow you to customize active/hoverClass options
+      $(this).removeClass( "ui-state-default" );
+    }
+  });
+});
+</script>
+<script>
+function addChoice(button) {
+  $( "<div id='choice-wrapper'> \
+        <label> Choice </label> \
+        <input type='text'/> \
+        <input type='button' onclick='removeParent(this)' value='Remove Choice'/> \
+        <br><br> \
+      </div>" ).insertBefore(button);
+}
+function removeParent(button) {
+  $(button).parent().remove();
+}
+</script>
 </head>
-
 <body>
-<div ng-controller="AdminCtrl">
-  <input type="button" value="New Checklist" ng-click="setNewPage(true)"></input>
-  <input type="button" value="Edit Checklist" ng-click="setNewPage(false)"></input>
+<div id="admin-panel" ng-controller="AdminCtrl">
+  <h1 class="ui-widget-header"> Checklist Admin Panel </h1>
+  <p class="note"> Drag and drop questions to re-order them. </p>
+  <li> 
+    <h1 id="checklist-edit"> Checklist Edit </h1>
+    <input type="button" value="New Checklist" ng-click="setNewPage(true)"></input>
+    <input type="button" value="Edit Checklist" ng-click="setNewPage(false)"></input>
+  </li>
   <div name="newPage" ng-show="newPage">
     <form name="newChecklistForm">
-      <h1>Checklist Name</h1>
-      <input type="text" ng-model="checklist.name" name="formName" ng-required="true"></input>
-      <h1>Checklist Description</h1>
-      <input type="text" ng-model="checklist.description"></input>
-      <div ng-repeat="item in items">
-        <h1> Question {{$index + 1}}</h1>
-        <input type="text" ng-model="item.Question__c" name="Q1" ng-required="true"></input>
-        <input type="number" ng-model="item.Order__c" name="O2" ng-required="true"></input>
-        <input type="checkbox" ng-model="item.Required__c" name="O3"></input>
-        <input type="checkbox" ng-model="item.Attach_Photo__c" name="O4"></input>
-        <select ng-model="item.Type__c" ng-options="type for type in types" ng-required="true"></select>
-        <input type="text" ng-model="item.Values__c" name="Q1" ng-show="showValues(item)"></input>
-        <p>{{item.Question__c}}</p>
-      </div>
-      <input type="button" value="+" ng-click="addQuestion()"></input>
-      <input type="button" value="-" ng-click="removeQuestion()"></input>
-      <input type="submit" value="Submit" ng-click="newChecklist()"> </input>
+      <li class="form-info">
+        <h1>Checklist Name</h1>
+        <input type="text" ng-model="checklist.name" name="formName" ng-required="true"></input>
+        <br/><br/>
+        <h1>Checklist Description</h1>
+        <input type="text" ng-model="checklist.description"></input>
+        <br/>
+      </li>
+      <ol id="sortable">
+        <li ng-repeat="item in items">
+          <!--NEEDS TO BE FIXED TO FOLLOW DRAG AND DROP-->
+          <!--<h1> Question {{$index + 1}}</h1>-->
+          <label> Type: </label>
+          <select ng-model="item.Type__c" ng-options="type for type in types" ng-required="true"></select>
+          <br/><br/>
+          <label> Question: </label>
+          <input type="text" ng-model="item.Question__c" name="Q1" ng-required="true"></input>
+          <br/><br/>
+          <!--NEEDS TO BE FIXED TO FOLLOW DRAG AND DROP-->
+          <input type="hidden" ng-model="item.Order__c" name="O2" ng-required="true"></input>
+          <label> Required: </label>
+          <input type="checkbox" ng-model="item.Required__c" name="O3"></input>
+          <br/><br/>
+          <label> Photo Attachment: </label>
+          <input type="checkbox" ng-model="item.Attach_Photo__c" name="O4"></input>
+          <br/>
+          <div ng-show="showValues(item)">
+            <br/>
+            <!--NEEDS TO BE FIXED TO FOLLOW CHOICE ADDER-->
+            <div id='choice-wrapper'>
+              <label> Choice </label>
+              <input type='text'/>
+              <input type='button' onclick='removeParent(this)' value='Remove Choice'/>
+              <br/><br/>
+            </div>
+            <div id='choice-wrapper'>
+              <label> Choice </label>
+              <input type='text'/>
+              <input type='button' onclick='removeParent(this)' value='Remove Choice'/>
+              <br/><br/>
+            </div>
+            <input type='button' onclick='addChoice(this)' value='Add Choice'/>
+            <br/>
+            <!--<label> Values: </label>
+            <input type="text" ng-model="item.Values__c" name="Q1"></input>-->
+          </div>
+          <br/>
+          <input type='button' value='Remove Question' onclick='removeParent(this)'/>
+          <br/>
+        </li>
+      </ol>
+      <br/>
+      <input type="button" value="Add Question" ng-click="addQuestion()"></input>
+      <!-- FIX TO ALLOW REMOVING OF INDIVIDUAL QUESTIONS FROM REMOVE BUTTON
+      <input type="button" value="-" ng-click="removeQuestion()"></input>-->
+      <input type="submit" value="Create" ng-click="newChecklist()"> </input>
+      <!--<div id="cart">
+        <div class="ui-widget-content">
+          <ol id="sortable">
+            <li class="placeholder" id="placeholder"> 
+              <label for='type'> Question Type </label>
+              <select id='type'>
+                <option value='text'> Text </option>
+                <option value='message'> Message </option>
+                <option value='number'> Number </option>
+                <option value='date'> Date </option>
+                <option value='picklist'> Picklist </option>
+              </select>
+              <input id="add-question" type='submit' value='Add Question' onclick="addQuestion( '#cart ol' )"/>
+              <p> Re-Order Using Drag and Drop </p>
+            </li>
+          </ol>
+        </div>
+      </div>-->
     </form>
   </div>
   <div id="editChecklist" ng-show="!newPage" >
     <div ng-repeat="checklist in checklists2">
     </div>
     <form name="editPage">
-      <h1>Edit Checklist</h1>
-      <li ng-repeat="">
-      <p> Name: </p> <input type="text" ng-model="item.Name" ng-required="true"></input>
-      <p> Description: </p> <input type="text" ng-model="item.Description__c" ng-required="true"></input>
-      <p> Id: {{item.Id}} </p>
-      <input type="submit" value="Submit" ng-click="editChecklist()"></input>
+      <li class="form-info">
+        <h1>Checklist Name</h1>
+        <input type="text" ng-model="item.Name" ng-required="true"></input>
+        <br/><br/>
+        <h1>Checklist Description</h1>
+        <input type="text" ng-model="item.Description__c" ng-required="true"></input>
+        <br/>
       </li>
-      <div ng-repeat="question in questions | filter:{isActive__c:'true'}" draggable="true" class="question">
+      <ol id="sortable">
+        <li ng-repeat="question in questions | filter:{isActive__c:'true'}" draggable="true" class="question">
+          <!--NEEDS TO BE FIXED TO FOLLOW DRAG AND DROP-->
+          <!--<h1> Question {{$index + 1}}</h1>-->
+          <label> Type: </label>
+          <select ng-model="question.Type__c" ng-options="type for type in types" ng-required="true"></select>
+          <br/><br/>
+          <label> Question: </label>
+          <input type="text" ng-model="question.Question__c" ng-required="true"></input>
+          <br/><br/>
+          <!--NEEDS TO BE FIXED TO FOLLOW DRAG AND DROP-->
+          <input type="hidden" ng-model="question.Order__c" ng-required="question.isActive__c"></input>
+          <label> Required: </label>
+          <input type="checkbox" ng-model="question.Required__c"></input>
+          <br/><br/>
+          <label> Photo Attachment: </label>
+          <input type="checkbox" ng-model="question.Attach_Photo__c" name="O4"></input>
+          <br/>
+          <div ng-show="showValues(question)">
+            <br/>
+            <!--NEEDS TO BE FIXED TO FOLLOW CHOICE ADDER-->
+            <div id='choice-wrapper'>
+              <label> Choice </label>
+              <input type='text'/>
+              <input type='button' onclick='removeParent(this)' value='Remove Choice'/>
+              <br/><br/>
+            </div>
+            <div id='choice-wrapper'>
+              <label> Choice </label>
+              <input type='text'/>
+              <input type='button' onclick='removeParent(this)' value='Remove Choice'/>
+              <br/><br/>
+            </div>
+            <input type='button' onclick='addChoice(this)' value='Add Choice'/>
+            <br/>
+            <!--<label> Values: </label>
+            <input type="text" ng-model="item.Values__c" name="Q1"></input>-->
+          </div>
+          <br/>
+          <input type="button" value="Remove Question" ng-click="deleteChecklistItem(question)"></input>
+          <br/>
+        </li>
+      </ol>
+      <!--<div ng-repeat="question in questions | filter:{isActive__c:'true'}" draggable="true" class="question">
         <p ng-show="inDB(question)">{{question.Question__c}}</p>
         <input ng-show="!inDB(question)" type="text" ng-model="question.Question__c" ng-required="true"></input>
         Order:
@@ -63,13 +255,13 @@ id="todo"
         <select ng-model="question.Type__c" ng-options="type for type in types" ng-required="true"></select>
         <input type="text" ng-model="question.Values__c" name="Q1" ng-show="showValues(question)"></input>
         <input type="button" value="Delete" ng-click="deleteChecklistItem(question)"></input>
-      </div>
+      </div>-->
     </form>
-    <input type="button" value="+" ng-click="addQuestionEdit()"></input>
+    <input type="button" value="Add Question" ng-click="addQuestionEdit()"></input>
+    <input type="submit" value="Update" ng-click="editChecklist()"></input>
   </div>
 </div>
 </body>
-
 <script>
 /* Angular */
 var checklistApp = angular.module('checklistApp', []);
@@ -144,7 +336,7 @@ checklistApp.controller("AdminCtrl", function ($scope) {
             function(result, event) {
             if (event.status) {
             console.log('Updated everything');
-            } else if (event.type == 'exeception') {
+            } else if (event.type == 'exception') {
             console.log('Exception');
             } else {
             console.log('Error!');
@@ -163,7 +355,7 @@ checklistApp.controller("AdminCtrl", function ($scope) {
             function(result, event) {
             if (event.status) {
             console.log('Updated everything items');
-            } else if (event.type == 'exeception') {
+            } else if (event.type == 'exception') {
             console.log('Exception');
             } else {
             console.log('Error!');
