Correct checklist name now displays when you complete a checklist

--- a/Checklist.html
+++ b/Checklist.html
@@ -757,9 +757,9 @@ id="todo"
                 </form>
               </section>
               <section id="three">
-                <div class="title"> Checklist With A Long Name Like This </div>
+                <div class="title"> {{checklistName}} </div>
                 <div class="question">
-                  <p id="conclusion"> You've just submitted a review of <span class="green_text"> Item 1</span>. </p>
+                  <p id="conclusion"> You've just submitted a review of <span class="green_text"> {{checklistName}} </span>. </p>
                 </div>
                 <a class="link last" id="return" data-section="one" href="#"> Return </a>
               </section>
