--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -92,7 +92,7 @@ $(function() {
 function addChoice(button) {
   $( "<div id='choice-wrapper'> \
         <label> Choice </label> \
-        <input type='text'/> \
+        <input type='text' class='choice'/> \
         <input type='button' onclick='removeParent(this)' value='Remove Choice'/> \
         <br><br> \
       </div>" ).insertBefore(button);
@@ -144,13 +144,13 @@ function removeParent(button) {
             <!--NEEDS TO BE FIXED TO FOLLOW CHOICE ADDER-->
             <div id='choice-wrapper'>
               <label> Choice </label>
-              <input type='text'/>
+              <input type='text' class="choice"/>
               <input type='button' onclick='removeParent(this)' value='Remove Choice'/>
               <br/><br/>
             </div>
             <div id='choice-wrapper'>
               <label> Choice </label>
-              <input type='text'/>
+              <input type='text' class="choice"/>
               <input type='button' onclick='removeParent(this)' value='Remove Choice'/>
               <br/><br/>
             </div>
@@ -160,7 +160,7 @@ function removeParent(button) {
             <input type="text" ng-model="item.Values__c" name="Q1"></input>-->
           </div>
           <br/>
-          <input type='button' value='Remove Question' onclick='removeParent(this)'/>
+          <input type='button' value='Remove Question' onclick='removeQuestion(item)'/>
           <br/>
         </li>
       </ol>
@@ -320,8 +320,9 @@ checklistApp.controller("AdminCtrl", function ($scope) {
     $scope.showValues = function(item) {
       return (item.Type__c == 'Rating') || (item.Type__c == 'Picklist') || (item.Type__c == 'Multi-Select');
     }
-    $scope.removeQuestion = function() {
-      $scope.items.pop();
+    $scope.removeQuestion = function(item) {
+      var index = $scope.questions.indexOf(item)
+      $scope.questions.splice(index,1);
     }
     $scope.editChecklist = function() {
       if ($scope.editPage.$valid) {
